# svdb

./: Cargo.toml  README.md  bench_release.py  mkdocs.yml  pyproject.toml  universal_benchmark.py
benches/: search_benchmark.rs
demo_db/: metadata.db
docs/: index.md  install.md  quickstart.md
docs/api/: python.md
docs/concepts/: modes.md
docs/guides/: benchmarking.md  optimization_tuning.md
examples/: basic.rs
src/: auto_tune.rs  lib.rs  python_bindings.rs  quantize.rs  quantized_storage.rs  search.rs  storage.rs  strategy.rs  types.rs
tests/: stress_test_v0.2.0.py  test_phase1_auto_tuner.py  test_pq_accuracy.py
